@@ -5,6 +5,8 @@ lib_LTLIBRARIES = libAtlasCodecs-0.6.la
 
 libAtlasCodecs_0_6_la_LDFLAGS = $(INTERFACE_VERSION)
 
+libAtlasCodecs_0_6_la_LIBADD = ../libAtlas-0.6.la
+
 libAtlasCodecs_0_6_la_SOURCES = \
 	Utility.cpp XML.cpp Packed.cpp Bach.cpp
 
